--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -66,7 +66,7 @@
     </div>
 
     <!-- Main Content Route -->
-    <main class="main-content">
+    <main class="main-content" [@fadeAnimation]="getRouteAnimationData()">
         <router-outlet></router-outlet>
     </main>
 
